add:文件相关功能前置修改